--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div>
 
 				<button id="newgame">New Game</button>
-				<button data-hint-target="#modal">Hint</button>
+				<button data-hint-target="#hint">Hint</button>
                 <div class="hint" id="hint">
                    <div class="hint-header">
                          <div class="title">Hint for the next move</div>
