--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                          <div class="title">Hint for the next move</div>
                          <button data-close-button class="close-button">&times;</button>
                    </div>
-                   <div class="hint-body">
+                   <div class="hint-body" id ="hint_for_human">
 					<ul>
 						<li data-value="1" class="active">Human</li>
 						<li data-value="0">Computer</li>
